# batchata

./: .gitignore  CLAUDE.md  MCP_IMPLEMENTATION.md  PLAN.md  README.md  ROADMAP.md  SPEC.md  ai_batch.py  development.md  hello.py  llms.txt  pyproject.toml
.claude/commands/: new-spec.md
batchata/: batch_manager.py  core.py  exceptions.py  types.py
batchata/cli/: __init__.py  demo.py  mcp.py
batchata/core/: __init__.py  batch.py  batch_config.py  batch_params.py  batch_run.py  concurrent_executor.py  job.py  job_result.py
batchata/providers/: __init__.py  batch_request.py  model_config.py  provider.py  provider_registry.py
docs/: batchata.html  search.js
examples/: __init__.py  batch_manager_example.py  citation_example.py  citation_with_pydantic.py  demo_state.json  gemini_example.py  pdf_extraction.py  simple_demo.py  simple_file_demo.py  simple_pdf_demo.py  spam_detection.py  time_limit_example.py  timeout_example.py
specs/: 013-enhanced-error-handling.md  initial-ai-batch-mvp.md  template.md
src/: __init__.py  ai_batch.py  batch_job.py  batch_manager.py  core.py  file_processing.py  utils.py
tests/: __init__.py  conftest.py  test_ai_batch.py  test_batch.py  test_batch_config.py  test_batch_manager.py  test_batch_params.py  test_batch_request.py  test_batch_run.py  test_citation_modes.py  test_concurrent_executor.py  test_dry_run.py  test_hello.py  test_job.py  test_job_result.py  test_mcp_cli.py  test_mcp_integration.py  test_mock_provider.py  test_model_config.py  test_pdf_processing.py  test_provider_registry.py  test_providers.py  test_utils.py
(+53 files in other folders)
