[project]
name = "ai-batch"
version = "0.1.0"
description = "Batch processing for Anthropic's Claude API with structured output"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.57.1",
    "instructor>=1.9.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
ai-batch-example = "examples.spam_detection:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
